# docs/swagger.json
@@ -93,7 +93,7 @@
                 }
             }
         },
-        "/bill/info/report/:year/:month": {
+        "/bill/info/report/{year}/{month}": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -102,18 +102,23 @@
                     "application/json"
                 ],
                 "tags": [
-                    "billing"
+                    "info"
                 ],
                 "summary": "make a report",
                 "parameters": [
                     {
-                        "description": "choose a year and a month",
-                        "name": "input",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/balance.Report"
-                        }
+                        "type": "integer",
+                        "description": "year",
+                        "name": "year",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "month",
+                        "name": "month",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -144,17 +149,17 @@
                     "application/json"
                 ],
                 "tags": [
-                    "billing"
+                    "info"
                 ],
-                "summary": "give name to a service",
+                "summary": "give a name to a service",
                 "parameters": [
                     {
-                        "description": "enter the service id and a name",
+                        "description": "enter service id and a name",
                         "name": "input",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/balance.Report"
+                            "$ref": "#/definitions/balance.Service"
                         }
                     }
                 ],
@@ -323,15 +328,12 @@
                 }
             }
         },
-        "balance.Report": {
+        "balance.Service": {
             "type": "object",
             "required": [
                 "name"
             ],
             "properties": {
-                "amount": {
-                    "type": "integer"
-                },
                 "name": {
                     "type": "string"
                 },
@@ -344,11 +346,13 @@
             "type": "object",
             "properties": {
                 "amount": {
-                    "description": "Name     string `json:\"name\" binding:\"required\"`",
                     "type": "integer"
                 },
                 "id": {
                     "type": "integer"
+                },
+                "reason": {
+                    "type": "string"
                 }
             }
         },
